--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,11 +3,11 @@ uvicorn[standard]==0.24.0
 python-multipart==0.0.6
 pydantic==2.5.0
 pydantic-settings==2.1.0
-sentence-transformers==2.2.2
+sentence-transformers>=2.7.0
 faiss-cpu>=1.8.0
 PyPDF2==3.0.1
 python-docx==1.1.0
-openai==1.3.0
+openai>=1.54.0
 langchain==0.0.350
 langchain-community==0.0.10
 numpy>=1.26.0
