--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -12,4 +12,8 @@ langchain==0.0.350
 langchain-community==0.0.10
 numpy>=1.26.0
 python-dotenv==1.0.0
+sqlalchemy==2.0.23
+aiosqlite==0.19.0
+passlib[bcrypt]==1.7.4
+python-jose[cryptography]==3.3.0
 
