--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -15,5 +15,6 @@ python-dotenv==1.0.0
 sqlalchemy==2.0.23
 aiosqlite==0.19.0
 passlib[bcrypt]==1.7.4
+bcrypt<4.0.0
 python-jose[cryptography]==3.3.0
 
